--- a/game1.ui
+++ b/game1.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>645</width>
+    <height>368</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,33 +18,37 @@
     <rect>
      <x>130</x>
      <y>80</y>
-     <width>49</width>
-     <height>16</height>
+     <width>151</width>
+     <height>101</height>
     </rect>
    </property>
    <property name="text">
     <string>State A</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>120</y>
-     <width>181</width>
-     <height>151</height>
+     <x>400</x>
+     <y>50</y>
+     <width>221</width>
+     <height>251</height>
     </rect>
    </property>
-   <property name="text">
-    <string/>
+   <property name="acceptDrops">
+    <bool>true</bool>
    </property>
-   <property name="pixmap">
-    <pixmap resource="resources.qrc">:/C:/Users/josem/Pictures/cuadrado.png</pixmap>
+   <property name="autoFillBackground">
+    <bool>true</bool>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
    </property>
   </widget>
  </widget>
- <resources>
-  <include location="resources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
