--- a/game1.ui
+++ b/game1.ui
@@ -6,47 +6,56 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>645</width>
-    <height>368</height>
+    <width>1021</width>
+    <height>645</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="label">
+  <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>80</y>
-     <width>151</width>
-     <height>101</height>
+     <x>810</x>
+     <y>100</y>
+     <width>160</width>
+     <height>411</height>
     </rect>
    </property>
-   <property name="text">
-    <string>State A</string>
-   </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QPushButton" name="pushButton_2">
+      <property name="text">
+       <string>PushButton</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="pushButton">
+      <property name="text">
+       <string>PushButton</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="pushButton_3">
+      <property name="text">
+       <string>PushButton</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
-  <widget class="QFrame" name="frame">
+  <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>400</x>
-     <y>50</y>
-     <width>221</width>
-     <height>251</height>
+     <x>40</x>
+     <y>70</y>
+     <width>741</width>
+     <height>531</height>
     </rect>
    </property>
-   <property name="acceptDrops">
-    <bool>true</bool>
-   </property>
-   <property name="autoFillBackground">
-    <bool>true</bool>
-   </property>
-   <property name="frameShape">
-    <enum>QFrame::StyledPanel</enum>
-   </property>
-   <property name="frameShadow">
-    <enum>QFrame::Raised</enum>
-   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout"/>
   </widget>
  </widget>
  <resources/>
