--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -69,6 +69,9 @@ QPushButton
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_2">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>710</x>
@@ -88,6 +91,9 @@ QPushButton
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_3">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>710</x>
